<resources>
    <string name="app_name">WaterMon WLAN</string>
    <string name="scan_results_tap_to_connect">Scan results (tap to connect)</string>
    <string name="start_scan">Start Scan</string>
    <string name="device_name">Device Name</string>
    <string name="mac_xx_xx_xx_xx_xx">MAC: XX:XX:XX:XX:XX</string>
    <string name="_100_dbm">-100 dBm</string>
    <string name="ble_playground">BLE Settings</string>
    <string name="location_permission_required">Location Permission Required</string>
    <string name="location_permission_rationale">Starting from Android 6, the system requires apps to be granted location access in order to scan for BLE devices.\n\nYour location is never used aside from enabling the app to perform BLE scans.</string>
    <string name="bluetooth_permission_required">Nearby Devices Permission Required</string>
    <string name="bluetooth_permission_rationale">Starting from Android 12, the system requires apps to be granted Nearby Devices access in order to scan for and connect to BLE devices.</string>
    <string name="please_grant_relevant_permissions">Please grant required permissions</string>
    <string name="app_settings_rationale">Prior requests for required permissions have been repeatedly or permanently denied. You\'ll need to manually grant the app these permissions from the app\'s Settings screen.</string>
    <string name="cannot_launch_app_settings">Unable to launch app settings, please navigate to app settings manually</string>
    <string name="app_settings">App Settings</string>
    <string name="quit">Quit</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_or_unable_to_connect_to_device">Disconnected or unable to connect to %1$s.</string>
    <string name="ok">OK</string>
    <string name="enter_payload_in_hex_0_9_a_f_a_f">Enter payload in hex (0–9, a-f, A-F)</string>
    <string name="characteristics_tap_to_interact">Characteristics</string>
    <string name="mtu_value">MTU value</string>
    <string name="log">Log</string>
    <string name="request_mtu">Request MTU</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="signal_strength_dbm">"Signal Strength: %1$d dBm"</string>
    <string name="clicked_on_wifi">Clicked on wifi %1$s</string>
    <string name="send_command">Send Command</string>
    <string name="sending_forgot_command">Sending forgot command.</string>
    <string name="ssid">SSID</string>
    <string name="password">********</string>
    <string name="base_url">Base URL</string>
    <string name="base_url_meta">Base URL Meta</string>
</resources>