<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BleOperationsActivity">

    <LinearLayout
        android:id="@+id/mtu_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/characteristics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/characteristics_tap_to_interact"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/mtu_container"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/characteristics_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/characteristics_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbarFadeDuration="0"
            android:scrollbars="vertical"
            tools:listitem="@layout/row_characteristic" />

        <TextView
            android:id="@+id/log_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/log"
            android:textStyle="bold"
            android:textSize="16sp" />

        <ScrollView
            android:id="@+id/log_scroll_view"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="4dp">

            <TextView
                android:id="@+id/log_text_view"
                android:scrollbars="vertical"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </ScrollView>

        <Button
            android:id="@+id/send_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/send_command"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
